# Shemul-PIP

./: .gitignore  .markdownlint.json  .prettierrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  shemul.json
.github/workflows/: publish.yml
completion/: shemul.bash  shemul.fish  shemul.zsh
doc/: README.md  build-guide.md  local-release-checklist.md  publish-troubleshooting.md
src/shemul/: __init__.py  app.py  autocomplete.py  cli.py  command.py  config.py  context.py  doctor.py  executor.py  guard.py  schema.json  template.py  ui.py  util.py
test/: test_config.py  test_global_scope.py  test_packaging.py  test_template.py
