[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shemul"
version = "1.0.0"
description = "Advanced project-aware task runner"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Md. Ashraful Alam Shemul", email = "shemul@stechbd.net" }, { name = "S Technologies", email = "contact@stechbd.net" }]
keywords = ["cli", "task-runner", "devtools", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

dependencies = [
  "rich>=13.7.0",
  "jsonschema>=4.22.0"
]

[project.urls]
Homepage = "https://shemul.stechbd.net"
Repository = "https://github.com/STechBD/Shemul-PIP"
Issues = "https://github.com/STechBD/Shemul-PIP/issues"

[project.scripts]
shemul = "shemul.cli:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["shemul*"]

[tool.setuptools.package-data]
shemul = ["schema.json"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
